shop/kustomize/shop/base/storefront/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
  labels:
    app: storefront
spec:
  selector:
    matchLabels:
      app: storefront
  template:
    metadata:
      labels:
        app: storefront
    spec:
      containers:
        - name: storefront
          tty: true
          image: jetpackio/devbox:latest
          command:
            - devbox
            - run
            - --
            - bash
            - -c
            - |
              bun install;
              task web:dev;
          ports:
            - containerPort: 3000
              name: http
