shop/kustomize/shop/base/storefront/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storefront
  labels:
    app: storefront
spec:
  type: ClusterIP
  selector:
    app: storefront
  ports:
    - name: storefront
      port: 3000
    - name: tinacms
      port: 3200
